# mongo-search-demo

./: .gitignore  README.md  checkpoints  docker-compose.yml  init-mongo.sh  pyproject.toml  setup-replica-set.sh
.github/: copilot-instructions.md
config/: config.yaml
exe/: benchmark  ingest  search
scripts/: benchmark.py  ingest.py  search.py
src/: __init__.py  config_loader.py  embedding_service.py  ingest_pipeline.py  mongodb_manager.py  search_service.py  search_tui.py  text_processor.py  wiki_parser.py
tests/: __init__.py  test_demo_search.py  test_embedding_service.py  test_ingest_pipeline.py  test_mongodb_manager.py  test_search.py  test_search_service.py  test_text_processor.py  test_wiki_parser.py
